<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="server">SERVER</string>
    <string name="server_port">Port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="client_address">Address</string>
    <string name="client_port">Port</string>
    <string name="client_hour">Ora</string>
    <string name="client_minute">Minut</string>
    <string name="set">Set</string>
    <string name="reset">Reset</string>
    <string name="poll">Poll</string>
</resources>
